infinite scroll demo

--- a/angular/html/views/picGridView.html
+++ b/angular/html/views/picGridView.html
@@ -1,3 +1,7 @@
 <section>
     <h1>Pic Grid</h1>
+
+    <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
+        <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
+    </div>
 </section>
