--- a/angular/html/views/picGridView.html
+++ b/angular/html/views/picGridView.html
@@ -1,5 +1,10 @@
 <section>
-    <h1>Pic Grid</h1>
+    <style>
+        img {
+            max-width: 25%;
+        }
+    </style>
+    <h1>The complete Geek&Poke</h1>
 
     <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
         <a ng-repeat='image in images' target="_blank" href="http://geek-and-poke.com{{getPostPathFromIndex(image)}}">
