--- a/angular/html/views/onePicView.html
+++ b/angular/html/views/onePicView.html
@@ -1,11 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<section>
 
-    <img ng-src='{{url}}' title="{{title}}">
-</body>
-</html>
+    <style>
+        .flex {
+            display: flex;
+        }
+
+        .item {
+            margin-left: 1em;
+            margin-top: 1em;
+            margin-right: 1em;
+        }
+
+        img {
+            max-height: 90vh;
+            max-width: 90vw;
+        }
+
+        .polaroid {
+            position: relative;
+            /* width: 220px; */
+            margin-left: 1em;
+            margin-top: 1em;
+        }
+
+        .polaroid img {
+            border: 10px solid #fff;
+            border-bottom: 45px solid #fff;
+            -webkit-box-shadow: 3px 3px 3px #777;
+            -moz-box-shadow: 3px 3px 3px #777;
+            box-shadow: 3px 3px 3px #777;
+        }
+
+        .polaroid p {
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            bottom: 0px;
+            color: #888;
+        }
+
+        .courier {
+            font-family: "Courier New","Courier","monospace";
+        }
+
+    </style>
+
+    <div class="flex">
+
+        <span class="item">
+            <button ng-click="reload()" class="btn-floating grey"><i class="material-icons">skip_next</i></button>
+        </span>
+        <span class="polaroid">
+            <a href="http://geek-and-poke.com{{postUrl}}">
+                <img ng-src='{{url}}' title="{{title}}">
+                <p class="courier">{{date}}</p>
+            </a>
+        </span>
+    </div>
+</section>
+
