max-width, max-height = 100%

--- a/angular/html/views/onePicView.html
+++ b/angular/html/views/onePicView.html
@@ -18,7 +18,7 @@
         <span class="item">
             <button ng-click="reload()" class="btn-floating grey"><i class="material-icons">skip_next</i></button>
         </span>
-        <cartoon-image index="{{index}}" max-height-vh="90" max-width-vw="90"></cartoon-image>
+        <cartoon-image index="{{index}}" max-height-vh="90"></cartoon-image>
     </div>
 </section>
 
