picGridView: h1 {courier new}

--- a/angular/html/views/picGridView.html
+++ b/angular/html/views/picGridView.html
@@ -13,9 +13,13 @@
             margin-top: 1em;
         }
 
+        h1 {
+            font-family: "Courier New","Courier","monospace";
+        }
+
     </style>
     <a class="btn-floating grey" href="#/picgrid?shuffle={{shuffleSwitch}}"><i class="material-icons">{{shuffleIcon}}</i></a>
-    <h1 class="courier">The complete Geek&Poke</h1>
+    <h1>The complete Geek&Poke</h1>
 
     <div class="infinite-scroll" infinite-scroll='loadMore()' infinite-scroll-distance='2'>
         <div class="row">
