--- a/angular/html/views/picGridView.html
+++ b/angular/html/views/picGridView.html
@@ -18,7 +18,8 @@
         }
 
     </style>
-    <a class="btn-floating grey" href="#/picgrid?shuffle={{shuffleSwitch}}"><i class="material-icons">{{shuffleIcon}}</i></a>
+    <a class="btn-floating grey" title="{{tooltipForButton}}" href="#/picgrid?shuffle={{shuffleSwitch}}"><i class="material-icons">{{shuffleIcon}}</i></a>
+    <a class="btn-floating grey" title="one picture at a time" href="#/onepic"><i class="material-icons">skip_next</i></a>
     <h1>The complete Geek&Poke</h1>
 
     <div class="infinite-scroll" infinite-scroll='loadMore()' infinite-scroll-distance='2'>
