--- a/angular/html/views/onePicView.html
+++ b/angular/html/views/onePicView.html
@@ -9,6 +9,12 @@
             margin-left: 1em;
             margin-top: 1em;
             margin-right: 1em;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .item > * {
+            margin-top: 1em;
         }
 
     </style>
@@ -16,7 +22,8 @@
     <div class="flex">
 
         <span class="item">
-            <button ng-click="reload()" class="btn-floating grey"><i class="material-icons">skip_next</i></button>
+            <button title="next random cartoon" ng-click="reload()" class="btn-floating grey"><i class="material-icons">skip_next</i></button>
+            <a title="grid view" class="btn-floating grey" href="#/picgrid"><i class="material-icons">apps</i></a>
         </span>
         <cartoon-image index="{{index}}" max-height-vh="90"></cartoon-image>
     </div>
